--- a/docs/release_guide.pod
+++ b/docs/release_guide.pod
@@ -513,8 +513,9 @@ Previous releases were bundled as part of monthly Parrot releases.
   2020-03-01   2020.02.1                       (Altai-man)
   2020-05-04   Rakudo #135 "2020.05"           (Altai-man + Releasable)
   2020-05-10   2020.05.1                       (Altai-man)
-  2020-06-21   Rakudo #136                     (Altai-man + Releasable)
-  2020-07-20   Rakudo #137                     (Altai-man + Releasable)
+  2020-06-21   Rakudo #136 "2020.06"           (Altai-man + Releasable)
+  2020-07-20   Rakudo #137 "2020.07"           (Altai-man + Releasable)
+  2020-07-27   2020.07.1                       (Altai-man)
 
 =head1 COPYRIGHT
 
