--- a/docs/ChangeLog
+++ b/docs/ChangeLog
@@ -1,3 +1,7 @@
+New in 2020.07.1:
+  + Fixes:
+    + Fix profiling results writing
+
 New in 2020.07:
   + Fixes:
     + Improve "Method not found" error message for some rare cases [0a86798f]
